# PLP_directRNA_design_V2

./: .gitignore  Dockerfile  Dockerfile_old_cutadapt  Dockerfile_samtools  Dockerfile_samtools.txt  Dockerfile_samtools_v2.txt  README.md  requirements.txt
PLP_directRNA_design/: probedesign.py
PLP_directRNA_design_package/: pyproject.toml  setup.py
PLP_directRNA_design_package/plp_directrna_design/: __init__.py  cli_utils.py  probedesign.py  specificity_check.py
PLP_directRNA_design_package/plp_directrna_design.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
codes/: Benchmarking.ipynb  Developing.ipynb  Mus.fa.fai  Mus_musculus.GRCm39.dna.chromosome.10.fa.fai  My_Candidate.txt  Probes.txttmp  Probes.txttmp.fa  Untitled-1.ipynb  export_probes.py  extract_features.py  extract_mrna.py  extract_sequences.py  find_target.py  regions.fa  regions.txt  regions_gene_name.txt  run_probe_design.py  specificity_check.py  specificity_check_multi_thread.py  specificity_check_multi_thread_split.py  temp_extracted.fa  test
